Try to fix flashcard form on small screens

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -52,7 +52,7 @@
 .form-body {
     width: 100%;
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr 3fr;
     column-gap: 1em;
     row-gap: 0.5em;
 }
